Externalized secret file Set approval prompt to auto Changed properties and doc accordingly

--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -1,3 +1,7 @@
 auth.public.paths=/portal/google_login
 auto.login.hooks=com.liferay.google.GoogleAutoLogin
-login.form.navigation.post=google
+login.form.navigation.post=Google
+
+
+# Set this property in the portal-ext.properties file
+# google.client.secrets.location=path to the client_secrets.json
