Fixed properties Removed not needed file

--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -1,6 +1,6 @@
 auth.public.paths=/portal/google_login
 auto.login.hooks=com.liferay.google.GoogleAutoLogin
-login.form.navigation.post=Google
+login.form.navigation.post=google
 
 
 # Set this property in the portal-ext.properties file
